catalog-service/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog-vs-from-gw
spec:
  hosts:
    - "catalog.istioinaction.io"
  gateways:
    - catalog-svc-gateway
  http:
    - route:
        - destination:
            host: catalog-service.products.svc.cluster.local # The service which will direct the traffic
            port:
              number: 4000
