catalog-service/istio/vs-header-match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog-vs-from-gw
spec:
  hosts:
    - "catalog.istioinaction.io"
  gateways:
    - catalog-svc-gateway
  http:
    - match:
        - headers:
            x-istio-cohort:
              exact: "internal"
      route:
        - destination:
            host: catalog-service.products.svc.cluster.local # The service which will direct the traffic
            subset: version-v2
    - route:
        - destination:
            host: catalog-service.products.svc.cluster.local # The service which will direct the traffic
            subset: version-v1
